Bug 188108: Name forwarded emails appropriately Patch by Magnus Melin (mkmelin+mozilla@iki.fi) r=bienvenu sr=mscott